Adjustments to about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 section_id: about
 ---
 
-<div class='full parallax' style='background-image: url(images/@stock/about-us.jpg); color: #fff;'>
+<div class='full parallax' style='background-image: url(images/headers/05.png); color: #fff;'>
   <div class='row'>
     <div class='twelve columns'>
       {% include section-header.html title="About Inter/sections" color="#fff" tagline="" class="big" %}
@@ -15,21 +15,34 @@ section_id: about
 
 <div class='full'>
   <div class='row'>
-    <div class='medium-6 columns'>
-      <h3>History of Inter/sections</h3>
+    <div class='large-12 columns'>
+      <h2>About Inter/sections</h2>
+      <p class='header-line'>Inter/sections is an annual series of events programmed by the students of Queen Mary University of London’s Media and Arts Technology (MAT) doctoral training centre.</p>
+
+      <p>MAT students founded Inter/sections in 2016 as a forum to examine the disjoints in methods, philosophies and practices that they grapple with as interdisciplinary researchers reconciling computer science with other fields. In its inaugural year, Inter/sections probed the theme of Symbiosis with talks on how an understanding of art history, participatory design and speculative design can contribute to better technology. </p>
+
+      <a href="http://2016.intersections.io" class="button-link">Inter/sections 2016</a>
+    </div>
+    <!-- <div class='medium-6 columns'>
+      <h3>Annual themes</h3>
       <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
     </div>
-    <div class='medium-6 columns'>
-      <h3>This year's theme</h3>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-    </div>
-  </div>
+  </div> -->
+</div>
 </div>
 
-
 <div class='full'>
+  <div class='row'>
+    <div class='large-12 columns'>
+      <h3>About the MAT program</h3>
+      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+    </div>
+    </div>
+
+
+<!-- <div class='full'>
   <div class='row'>
     {% for member in site.data.members %}
       <div class='small-6 medium-3 large-3 columns'>
@@ -58,10 +71,11 @@ section_id: about
       </div>
     {% endfor %}
   </div>
-</div>
+</div> -->
 
 
-<div class='full parallax' style='background: #f5f5f5'>
+
+<!-- <div class='full parallax' style='background: #f5f5f5'>
   <div class='row'>
     <div class='large-12 columns'>
       <p class='centered-text'>
@@ -74,7 +88,7 @@ section_id: about
       {% include section-header.html title="What our clients say" %}
       <div class='spacing'></div>
     </div>
-  </div>
+  </div> -->
   <div class='row'>
     <div class='large-12 columns'>
       <div class='mod modTestimonials'>
@@ -95,6 +109,6 @@ section_id: about
       </div>
     </div>
   </div>
-</div>
+<!-- </div> -->
 
 {% include our-supporters.html %}
