--- a/events.html
+++ b/events.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Portfolio
-section_id: portfolio
+title: Events
+section_id: events
 works:
   - image: images/@stock/work-1.jpg
     title: Beautiful Girl
