--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Exhibition
-section_id: exhibition
+title: Schedule and Locations
+section_id: schedule
 ---
 
 <div class='full parallax' style='background-image: url(images/@stock/about-us.jpg); color: #fff;'>
