Changed opacity of footer b/n logo. Deleted some extra gaps in index.html. Added classes to schedule and location for styling

--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -16,22 +16,22 @@ section_id: schedule
 <div class='full front-page-section events'>
   <div class='row' >
   <div class="large-12 columns">
-  <h2 style="text-align: center; size: 6em; color: white">Schedule</h2>
-    <p style="size: 2.5em; color: white; padding: 10px;">Big link to download. Do we need a graphical schedule as well?</p>
+  <h2 style="text-align: center; size: 6em; color: #222">Schedule</h2>
+    <p style="size: 2.5em;" class="text-schedule">Big link to download. Do we need a graphical schedule as well?</p>
     </div>
 </div>
 </div>
-<div class='full'>
+<div class='full front-page-section location'>
   <div class='row'>
     <h2 style="text-align: center; size: 6em; color: #222">Where it's happening</h2>
     <div class='medium-6 columns'>
       <h3>Description of location</h3>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p  class="text-schedule">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p  class="text-schedule">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
     </div>
     <div class='medium-6 columns'>
       <h3>Find on google maps</h3>
-      <p>Include Google Maps widget, maybe include a clickable link to open on phone</p>
+      <p class="text-schedule">Include Google Maps widget, maybe include a clickable link to open on phone</p>
     </div>
   </div>
 </div>
