--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ section_id: home
 <div class='full' style="background: #41a491;">
   <div class='row' >
   <h2 class='intro-text'>Theme 2017:</h2>
-  <h2 class='intro-text body'>Politics and ethics in media and art technology</h2>
+  <h2 class='intro-text body'>Politics and ethics in<br>media and art technology</h2>
     <!-- <p style="size: 2.5em; color: white; padding: 10px;">One line about the thing in general.</p> -->
 </div>
 </div>
@@ -59,7 +59,6 @@ section_id: home
       {% include section-header.html title="Symposium" color="#fff" tagline="" class="big" %}
     </div>
   </div>
-  <div class='four spacing'></div>
 </div>
 
 <div class='full'>
@@ -128,7 +127,8 @@ section_id: home
 </div> -->
 
 
-<div class='full parallax' style='background: #f5f5f5'>
+<!--div class='full parallax' style='background: #f5f5f5'-->
+
   <!-- <div class='row'>
     <div class='large-12 columns'>
       <p class='centered-text'>
