Fixed headers and indicated where content is needed

--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@ section_id: about
 <div class='full'>
   <div class='row'>
     <div class='large-12 columns'>
-      <h3>About the MAT program</h3>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <h2>About the MAT program</h2>
+      <p>We need MAT program copy here.</p>
+      <a href="http://www.mat.qmul.ac.uk" class="button-link">Visit the MAT website</a>
     </div>
     </div>
 
