--- a/exhibition.html
+++ b/exhibition.html
@@ -16,12 +16,12 @@ section_id: exhibition
 <div class='full'>
   <div class='row'>
     <div class='medium-6 columns'>
-      <h3>History of Inter/sections</h3>
+      <h2>About the exhibition</h2>
       <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
     </div>
     <div class='medium-6 columns'>
-      <h3>Video goes here</h3>
+      <h2>Video goes here</h2>
       <p>LAlala 2016</p>
     </div>
   </div>
