Fixed margins for sections on the front page. Still in progress.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ section_id: home
 ---
 
 
-<div class='full parallax' style='background-image: url(images/@stock/about-us.jpg); color: #fff;'>
+<div class='full parallax' style='background-image: url(images/headers/lights.jpg); color: #fff;'>
   <div class='row index_page'>
-      <img src='images/logo_landscape.png'>
+      <img src='images/logo-white.png' class="header-image">
+  </div>
     <div class='twelve columns'>
       {% include section-header.html title="September 3-8, 2017" color="#fff" tagline="" class="big" %}
     </div>
-  </div>
   <div class='four spacing'></div>
 </div>
 
@@ -28,41 +28,21 @@ section_id: home
     <div class='medium-12 columns'>
       <!-- <h3>inter/sections 2017</h3> -->
       <p class="header-line">Following the rise of unprecedented activism and political protests in the past year, Inter/sections 2017 explores how artists and technologists use different networks, databases, and systems to raise awareness of ethical and political issues around technologies.</p>
-      <p>Through a week-long programme of interactive artwork, we will engage with topics ranging from the ethics of data privacy to the political effects of social media. Free workshops and talks with artists and technology activists will question how current political systems impact evolving technologies and introduce ways that technology can subvert them.</p>
-      
+      <p>Through a week-long programme of interactive artwork, we will engage with topics ranging from the ethics of data privacy to the political effects of social media. Free workshops and talks with artists and technology activists will question how current political systems impact evolving technologies and introduce ways that technology can subvert them.</p>     
     </div>
-   <!--  <div class='medium-6 columns'>
-      <h3>Our skills</h3>
-      <div class='mod modBarGraph'>
-        <ul class='bars'>
-          {% for skill in page.skills %}
-            <li>
-              <h4 style=''>
-                {{skill.title}}large
-                <strong>{{skill.percentage}}%</strong>
-              </h4>
-              <p class='highlighted' data-percent='{{skill.percentage}}'></p>
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div> -->
   </div>
 </div>
 
 <div class='full front-page-section symposium'>
   <div class='row'>
     <div class="large-12 columns">
-  
       <div class='row'>
-    <div class='twelve columns'>
-      {% include section-header.html title="Symposium" color="#fff" tagline="" class="big" %}
+        <div class='twelve columns'>
+          {% include section-header.html title="Symposium" color="#fff" tagline="" class="big" %}
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-
-<div class='full'>
-  <div class='row'>
+    <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>History of Inter/sections</h3>
       <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
@@ -72,12 +52,58 @@ section_id: home
       <h3>Video goes here</h3>
       <p>LAlala 2016</p>
     </div>
-  </div>
-    </div>
-</div>
-</div>
+    <!-- End two content columns -->
+  </div><!-- end row -->
+</div><!-- end full front-page-section symposium -->
+
 
 <div class='full front-page-section events'>
+  <div class='row'>
+    <div class="large-12 columns">
+      <div class='row'>
+        <div class='twelve columns'>
+          {% include section-header.html title="Events" color="#fff" tagline="" class="big" %}
+        </div>
+      </div>
+    </div>
+    <!-- Start the two columns of content: -->
+    <div class='medium-6 columns'>
+      <h3>History of Inter/sections</h3>
+      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+    </div>
+    <div class='medium-6 columns'>
+      <h3>Video goes here</h3>
+      <p>LAlala 2016</p>
+    </div>
+    <!-- End two content columns -->
+  </div><!-- end row -->
+</div><!-- end full front-page-section symposium -->
+
+<div class='full front-page-section exhibition'>
+  <div class='row'>
+    <div class="large-12 columns">
+      <div class='row'>
+        <div class='twelve columns'>
+          {% include section-header.html title="Exhibition" color="#fff" tagline="" class="big" %}
+        </div>
+      </div>
+    </div>
+    <!-- Start the two columns of content: -->
+    <div class='medium-6 columns'>
+      <h3>History of Inter/sections</h3>
+      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+    </div>
+    <div class='medium-6 columns'>
+      <h3>Video goes here</h3>
+      <p>LAlala 2016</p>
+    </div>
+    <!-- End two content columns -->
+  </div><!-- end row -->
+</div><!-- end full front-page-section symposium -->
+
+<!-- <div class='full front-page-section events'>
   <div class='row' >
   <div class="large-12 columns">
   <h2 style="text-align: center; size: 6em; color: white">Events</h2>
@@ -91,7 +117,7 @@ section_id: home
   <h2 style="text-align: center; size: 6em; color: white">Exhibition</h2>
     <p style="size: 2.5em; color: white; padding: 10px;">One line here.</p>
     </div>
-</div>
+</div> -->
 
 
 <!-- <div class='full'>
