Added images to each page

--- a/exhibition.html
+++ b/exhibition.html
@@ -4,7 +4,7 @@ title: Exhibition
 section_id: exhibition
 ---
 
-<div class='full parallax' style='background-image: url(images/@stock/about-us.jpg); color: #fff;'>
+<div class='full parallax' style='background-image: url(images/headers/exhibition01.jpg); color: #fff;'>
   <div class='row'>
     <div class='twelve columns'>
       {% include section-header.html title="Exhibition" color="#fff" tagline="" class="big" %}
@@ -23,9 +23,9 @@ section_id: exhibition
     <div class='medium-6 columns'>
       <h2>Video goes here</h2>
       <p>LAlala 2016</p>
-    </div>
-  </div>
-</div>
+    </div><!-- end right half -->
+  </div><!-- end row -->
+</div><!-- end full -->
 
 
 <div class='full'>
