--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -4,7 +4,7 @@ title: Schedule and Locations
 section_id: schedule
 ---
 
-<div class='full parallax' style='background-image: url(images/@stock/about-us.jpg); color: #fff;'>
+<div class='full parallax' style='background-image: url(images/headers/wires.jpg); color: #fff;'>
   <div class='row'>
     <div class='twelve columns'>
       {% include section-header.html title="Schedule and location" color="#fff" tagline="" class="big" %}
@@ -27,7 +27,9 @@ section_id: schedule
     <div class='medium-6 columns'>
       <h3>Description of location</h3>
       <p  class="text-schedule">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p  class="text-schedule">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p  class="text-schedule">
+      <iframe width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJrdGpCiUddkgR_fKY1GiNYFg&key=..." allowfullscreen></iframe></p>
     </div>
     <div class='medium-6 columns'>
       <h3>Find on google maps</h3>
