--- a/symposium.html
+++ b/symposium.html
@@ -4,7 +4,7 @@ title: Symposium
 section_id: symposium
 ---
 
-<div class='full parallax' style='background-image: url(images/headers/20_1.jpg); color: #fff;'>
+<div class='full parallax' style='background-image: url(images/headers/notes.jpg); color: #fff;'>
   <div class='row'>
     <div class='twelve columns'>
       {% include section-header.html title="The Symposium" color="#fff" tagline="" class="big" %}
