--- a/events.html
+++ b/events.html
@@ -57,10 +57,10 @@ works:
 ---
 
 
-<div class='full parallax' style='background-image: url(images/@stock/portfolio-header-bg.jpg); color: #fff;'>
+<div class='full parallax' style='background-image: url(images/headers/overhead.jpg); color: #fff;'>
   <div class='row'>
     <div class='large-12 columns'>
-      {% include section-header.html title="Events" tagline="What's going on" color="#fff" class="big" %}
+      {% include section-header.html title="Events" tagline="" color="#fff" class="big" %}
     </div>
   </div>
   <div class='four spacing'></div>
