Took out Google map api because it was misbehaving

--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -27,9 +27,7 @@ section_id: schedule
     <div class='medium-6 columns'>
       <h3>Description of location</h3>
       <p  class="text-schedule">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p  class="text-schedule">
-      <iframe width="600" height="450" frameborder="0" style="border:0"
-src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJrdGpCiUddkgR_fKY1GiNYFg&key=..." allowfullscreen></iframe></p>
+      <p  class="text-schedule">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
     </div>
     <div class='medium-6 columns'>
       <h3>Find on google maps</h3>
