Changes pertaining to index page cover image padding, and banners delineating sections on the front page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ section_id: home
 ---
 
 
-<div class='full parallax' style='background-image: url(images/headers/lights.jpg); color: #fff;'>
+<div class='full-front-page parallax' style='background-image: url(images/headers/lights.jpg); color: #fff;'>
   <div class='row index_page'>
       <img src='images/logo-white.png' class="header-image">
   </div>
@@ -33,7 +33,7 @@ section_id: home
   </div>
 </div>
 
-<div class='full front-page-section symposium'>
+<div class='front-page-section symposium'>
   <div class='row'>
     <div class="large-12 columns">
       <div class='row'>
@@ -42,7 +42,12 @@ section_id: home
         </div>
       </div>
     </div>
+    </div>
+    </div>
     <!-- Start the two columns of content: -->
+<div class='front-page-section'>
+  <div class='row'>
+
     <div class='medium-6 columns'>
       <h3>History of Inter/sections</h3>
       <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
@@ -57,7 +62,7 @@ section_id: home
 </div><!-- end full front-page-section symposium -->
 
 
-<div class='full front-page-section events'>
+<div class='front-page-section events'>
   <div class='row'>
     <div class="large-12 columns">
       <div class='row'>
@@ -66,6 +71,10 @@ section_id: home
         </div>
       </div>
     </div>
+    </div>
+    </div>
+    <div class='front-page-section'>
+  <div class='row'>
     <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>History of Inter/sections</h3>
@@ -80,7 +89,7 @@ section_id: home
   </div><!-- end row -->
 </div><!-- end full front-page-section symposium -->
 
-<div class='full front-page-section exhibition'>
+<div class='front-page-section exhibition'>
   <div class='row'>
     <div class="large-12 columns">
       <div class='row'>
@@ -89,6 +98,10 @@ section_id: home
         </div>
       </div>
     </div>
+    </div>
+    </div>
+    <div class='front-page-section'>
+  <div class='row'>
     <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>History of Inter/sections</h3>
