Various changes to colour, layout and padding for index page elements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ section_id: home
   <div class='four spacing'></div>
 </div>
 
-<div class='full' style="background: #41a491;">
+<div class='full index-header-text' style="background: #41a491;">
   <div class='row' >
   <h2 class='intro-text'>Theme 2017:</h2>
   <h2 class='intro-text body'>Politics and ethics in<br>media and art technology</h2>
