--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ section_id: home
 
 <div class='full-front-page parallax' style='background-image: url(images/headers/lights.jpg); color: #fff;'>
   <div class='row index_page'>
-      <img src='images/logo-white.png' class="header-image">
+      <img src='images/logo-white-noDate.png' class="header-image">
   </div>
     <div class='twelve columns'>
-      {% include section-header.html title="September 3-8, 2017" color="#fff" tagline="" class="big" %}
+      {% include section-header.html title="" color="#fff" tagline="September 3-8, 2017" class="big" %}
     </div>
   <div class='four spacing'></div>
 </div>
