Added header image, adjusted header text padding

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -4,7 +4,7 @@ title: Exhibition
 section_id: exhibition
 ---
 
-<div class='full parallax' style='background-image: url(images/@stock/about-us.jpg); color: #fff;'>
+<div class='full parallax' style='background-image: url(images/headers/panel.jpg); color: #fff;'>
   <div class='row'>
     <div class='twelve columns'>
       {% include section-header.html title="Code of conduct" color="#fff" tagline="" class="big" %}
@@ -13,7 +13,7 @@ section_id: exhibition
   <div class='four spacing'></div>
 </div>
 
-<div class='full' style="background: #41a491;">
+<div class='full index-header-text' style="background: #41a491;">
   <div class='row' >
     <p class='intro-text para'>Inter/sections is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, age, religion or origins. We do not tolerate harassment of conference participants in any form. Conference participants violating these rules may be sanctioned or expelled from the conference at the discretion of the conference organizers.</p>
   </div>
