Fixed up text and spacing

--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -13,28 +13,38 @@ section_id: schedule
   <div class='four spacing'></div>
 </div>
 
-<div class='full front-page-section events'>
-  <div class='row' >
-  <div class="large-12 columns">
-  <h2 style="text-align: center; size: 6em; color: #222">Schedule</h2>
-    <p style="size: 2.5em;" class="text-schedule">Big link to download. Do we need a graphical schedule as well?</p>
-    </div>
-</div>
-</div>
-<div class='full front-page-section location'>
+<div class='full'>
   <div class='row'>
-    <h2 style="text-align: center; size: 6em; color: #222">Where it's happening</h2>
-    <div class='medium-6 columns'>
-      <h3>Description of location</h3>
-      <p  class="text-schedule">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p  class="text-schedule">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+    <div class='medium-12 columns'>
+      <h2>OUR LOCATION: Art Pavilion Mile End</h2>
     </div>
-    <div class='medium-6 columns'>
-      <h3>Find on google maps</h3>
-      <p class="text-schedule">Include Google Maps widget, maybe include a clickable link to open on phone</p>
-    </div>
+      <div class='medium-6 columns'>
+        <h3>About the art pavilion</h3>
+        <p  class="text-schedule">The art pavilion blah blah.</p>
+        <p  class="text-schedule">It is conveniently located within walking distance of Mile End and Stepney Green tube stations, and the 277, 205 and 25 buses stop nearby.</p>
+      </div>
+      <div class='medium-6 columns'>
+        <h3>Find on google maps</h3>
+        <p class="text-schedule">Include an image, maybe also a clickable link to open on phone</p>
+      </div>
   </div>
 </div>
+
+
+<div class='full'>
+  <div class='row'>
+    <div class='medium-12 columns'>
+      <h2>Scheulde</h2>
+      <p>Button needed for PDF download.</p>
+    </div>
+    <!-- <div class='medium-6 columns'>
+      <h3>This year's theme</h3>
+      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+    </div> -->
+  </div>
+</div>
+
 
 
 
