--- a/about.html
+++ b/about.html
@@ -39,7 +39,8 @@ section_id: about
       <p>We need MAT program copy here.</p>
       <a href="http://www.mat.qmul.ac.uk" class="button-link">Visit the MAT website</a>
     </div>
-    </div>
+  </div>
+</div>
 
 
 <!-- <div class='full'>
@@ -75,8 +76,8 @@ section_id: about
 
 
 
-<!-- <div class='full parallax' style='background: #f5f5f5'>
-  <div class='row'>
+<div class='full parallax'>
+<!--  <div class='row'>
     <div class='large-12 columns'>
       <p class='centered-text'>
         <i class='fa fa-quote-left' style='color: #F9CE06; font-size: 36px;'></i>
@@ -109,6 +110,6 @@ section_id: about
       </div>
     </div>
   </div>
-<!-- </div> -->
+</div>
 
 {% include our-supporters.html %}
