Added speaker and artist bios, need to address iframe on front page

--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@ section_id: home
       <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
     </div>
-    <div class='medium-6 columns'>
-      <h3>Video goes here</h3>
-      <p>LAlala 2016</p>
+    <div class='medium-6 columns iframe-content'>
+      <h3>Include video here</h3>
+      <p>iframe here from Vimeo, must auto-float to 100% of parent element</p>
+
+      <!--   <iframe src="https://player.vimeo.com/video/188005932" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+      
     </div>
     <!-- End two content columns -->
   </div><!-- end row -->
