--- a/exhibition.html
+++ b/exhibition.html
@@ -14,15 +14,13 @@ section_id: exhibition
 </div>
 
 <div class='full'>
-  <div class='row'>
+  <div class='row' style="display: flex">
     <div class='medium-6 columns'>
-      <h2>About the exhibition</h2>
       <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
     </div>
-    <div class='medium-6 columns'>
-      <h2>Video goes here</h2>
-      <p>LAlala 2016</p>
+    <div class='medium-6 columns iframe-content'>
+      <iframe src="https://player.vimeo.com/video/186455106" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div><!-- end right half -->
   </div><!-- end row -->
 </div><!-- end full -->
