--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ section_id: home
     </div>
     <!-- Start the two columns of content: -->
 <div class='front-page-section'>
-  <div class='row'>
+  <div class='row' style="display: flex">
 
     <div class='medium-6 columns'>
       <h3>The Inter/sections Symposium</h3>
@@ -54,10 +54,10 @@ section_id: home
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
     </div>
     <div class='medium-6 columns iframe-content'>
-      <h3>Include video here</h3>
-      <p>iframe here from Vimeo, must auto-float to 100% of parent element</p>
+      
+      <!-- <p>iframe here from Vimeo, must auto-float to 100% of parent element</p> -->
 
-      <!--   <iframe src="https://player.vimeo.com/video/188005932" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+      <iframe src="https://player.vimeo.com/video/185704156" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       
     </div>
     <!-- End two content columns -->
@@ -77,16 +77,15 @@ section_id: home
     </div>
     </div>
     <div class='front-page-section'>
-  <div class='row'>
+  <div class='row' style="display: flex">
     <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>A week of events</h3>
       <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
     </div>
-    <div class='medium-6 columns'>
-      <h3>Video goes here</h3>
-      <p>LAlala 2016</p>
+    <div class='medium-6 columns iframe-content'>
+      <img src="{{ site.url }}/images/headers/panel.jpg"
     </div>
     <!-- End two content columns -->
   </div><!-- end row -->
@@ -104,16 +103,15 @@ section_id: home
     </div>
     </div>
     <div class='front-page-section'>
-  <div class='row'>
+  <div class='row' style="display: flex">
     <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>Exhibition of media art</h3>
       <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
     </div>
-    <div class='medium-6 columns'>
-      <h3>Video goes here</h3>
-      <p>LAlala 2016</p>
+    <div class='medium-6 columns iframe-content'>
+      <iframe src="https://player.vimeo.com/video/186455106" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <!-- End two content columns -->
   </div><!-- end row -->
