Added Eventbrite URL to registration button

--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -23,9 +23,10 @@ section_id: schedule
         <p  class="text-schedule">The art pavilion blah blah.</p>
         <p  class="text-schedule">It is conveniently located within walking distance of Mile End and Stepney Green tube stations, and the 277, 205 and 25 buses stop nearby.</p>
       </div>
-      <div class='medium-6 columns'>
-        <h3>Find on google maps</h3>
-        <p class="text-schedule">Include an image, maybe also a clickable link to open on phone</p>
+      <div class='medium-6 columns iframe-content'>
+        
+        <iframe width="100%" height="100%" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJrdGpCiUddkgR_fKY1GiNYFg&key=..." allowfullscreen></iframe>
       </div>
   </div>
 </div>
