Added API key for google maps

--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -26,7 +26,7 @@ section_id: schedule
       <div class='medium-6 columns iframe-content'>
         
         <iframe width="100%" height="100%" frameborder="0" style="border:0"
-src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJrdGpCiUddkgR_fKY1GiNYFg&key=..." allowfullscreen></iframe>
+src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJrdGpCiUddkgR_fKY1GiNYFg&key=AIzaSyCFk-644ph0WLEaCdVFKsrSQFu53VMKROY" allowfullscreen></iframe>
       </div>
   </div>
 </div>
