Added broader browser support for iframe elements

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ section_id: home
     </div>
     <!-- Start the two columns of content: -->
 <div class='front-page-section'>
-  <div class='row' style="display: flex">
+  <div class='row iframe-flex'>
 
     <div class='medium-6 columns'>
       <h3>The Inter/sections Symposium</h3>
@@ -77,7 +77,7 @@ section_id: home
     </div>
     </div>
     <div class='front-page-section'>
-  <div class='row' style="display: flex">
+  <div class='row iframe-flex'>
     <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>A week of events</h3>
@@ -103,7 +103,7 @@ section_id: home
     </div>
     </div>
     <div class='front-page-section'>
-  <div class='row' style="display: flex">
+  <div class='row iframe-flex'>
     <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>Exhibition of media art</h3>
