--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -14,7 +14,7 @@ section_id: schedule
 </div>
 
 <div class='full'>
-  <div class='row'>
+  <div class='row iframe-flex'>
     <div class='medium-12 columns'>
       <h2>OUR LOCATION: Art Pavilion Mile End</h2>
     </div>
